Source/WebCore: Filename text in file upload controls is not aligned with button text on chromium-linux, chromium-win, and gtk.

https://bugs.webkit.org/show_bug.cgi?id=64692

The fix is to not include the margin, border, and padding in the calculation,
because those are already accounted for by RenderBlock::baselinePosition().

Patch by Patrick Dubroy <dubroy@chromium.org> on 2011-07-26
Reviewed by Dimitri Glazkov.

* rendering/RenderFileUploadControl.cpp:
(WebCore::RenderFileUploadControl::paintObject):

LayoutTests: In file upload controls, filename text was misaligned with button text.
Update chromium-linux with the new baseline images, and add temporary
exceptions for chromium-win and gtk until they can be rebaselined.

https://bugs.webkit.org/show_bug.cgi?id=64692

Patch by Patrick Dubroy <dubroy@chromium.org> on 2011-07-26
Reviewed by Dimitri Glazkov.

* platform/chromium-linux/fast/forms/box-shadow-override-expected.png:
* platform/chromium-linux/fast/forms/file-input-direction-expected.png:
* platform/chromium-linux/fast/forms/file-input-disabled-expected.png:
* platform/chromium-linux/fast/forms/form-element-geometry-expected.png:
* platform/chromium-linux/fast/forms/input-appearance-height-expected.png:
* platform/chromium-linux/fast/forms/input-file-re-render-expected.png:
* platform/chromium-linux/fast/forms/input-value-expected.png:
* platform/chromium/test_expectations.txt:
* platform/gtk/test_expectations.txt:

Canonical link: https://commits.webkit.org/80930@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@91759 268f45cc-cd09-0410-ab3c-d52691b4dbfc